# medarchive1

./: MedArchive_презентация.pptx  infoaboutpres
medarchive/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
medarchive/backend/alembic/: env.py  script.py.mako
medarchive/backend/alembic/versions/: 49a1ec5a36b7_initial_empty_migration.py  6964316e1419_merge_migration_heads.py  a7b8c9d0e1f2_add_public_search_indexes.py  b7f9a1a3c2d4_create_services_tables.py  c3d4e5f6a7b8_create_archive_import_tables.py  d4e5f6a7b8c9_create_matching_candidates.py  e5f6a7b8c9d0_create_validation_history_tables.py  f6a7b8c9d0e1_create_worker_processing_events.py  g7h8i9j0k1l2_add_document_timing_fields.py
medarchive/backend/app/: __init__.py  main.py
medarchive/backend/app/api/: __init__.py
medarchive/backend/app/api/routes/: admin.py  (+2 more)
medarchive/backend/app/core/: __init__.py  auth.py  config.py  constants.py  logging.py
medarchive/backend/app/db/: __init__.py  base.py  session.py
medarchive/backend/app/models/: __init__.py
medarchive/backend/app/repositories/: __init__.py
medarchive/backend/app/schemas/: __init__.py  parsed_document.py
medarchive/backend/app/services/: __init__.py  document_processing.py
medarchive/backend/app/utils/: __init__.py  file_detection.py
medarchive/backend/app/workers/: __init__.py  celery_app.py  pipeline.py  tasks.py
medarchive/backend/tests/: test_health.py
medarchive/backend/tests/api/: test_admin_api.py  test_admin_auth.py  test_public_api.py
medarchive/backend/tests/fixtures/: README.md  __init__.py  generators.py
(+143 files in other folders)
