[project]
name = "medarchive-backend"
version = "0.1.0"
description = "Backend placeholder for the MedArchive / MedPartners hackathon project."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "openpyxl>=3.1.0",
  "pdfplumber>=0.11.0",
  "pdf2image>=1.17.0",
  "psycopg[binary]>=3.2.0",
  "PyMuPDF>=1.24.0",
  "pytesseract>=0.3.13",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.20",
  "pydantic-settings>=2.7.0",
  "rapidfuzz>=3.9.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "reportlab>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py311"
